feat: add paths docs
