# src/docs/openapi.yaml
@@ -18,6 +18,474 @@ tags:
   - name: Contents
     description: Operaciones relacionadas con los contenidos
 
+paths:
+  # USERS
+  /users:
+    get:
+      tags:
+        - Users
+      summary: Obtener todos los usuarios
+      description: Requiere autenticación
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/user"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    post:
+      tags:
+        - Users
+      summary: Crear un nuevo usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/requestBodies/userCrate"
+      responses:
+        "201":
+          description: Usuario creado
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /users/{id}:
+    get:
+      tags:
+        - Users
+      summary: Obtener un usuario por ID
+      description: Requiere autenticación
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID del usuario
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    put:
+      tags:
+        - Users
+      summary: Actualizar un usuario por ID
+      description: Requiere autenticación
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID del usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/requestBodies/userUpdate"
+      responses:
+        "200":
+          description: Usuario actualizado
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    delete:
+      tags:
+        - Users
+      summary: Eliminar un usuario por ID
+      description: Requiere autenticación
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID del usuario
+      responses:
+        "204":
+          description: Usuario eliminado
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /users/email/{email}:
+    get:
+      tags:
+        - Users
+      summary: Obtener un usuario por correo electrónico
+      description: Requiere autenticación
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: email
+          required: true
+          schema:
+            $ref: "#/components/bases/email"
+          description: Correo electrónico del usuario
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /users/login:
+    post:
+      tags:
+        - Users
+      summary: Iniciar sesión
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/requestBodies/userLogin"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/responses/userLogin"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  # LABELS
+  /labels:
+    get:
+      tags:
+        - Labels
+      summary: Obtener todas las etiquetas
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/label"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    post:
+      tags:
+        - Labels
+      summary: Crear una nueva etiqueta
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/requestBodies/label"
+      responses:
+        "201":
+          description: Etiqueta creada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/label"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /labels/{id}:
+    get:
+      tags:
+        - Labels
+      summary: Obtener una etiqueta por ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID de la etiqueta
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/label"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    patch:
+      tags:
+        - Labels
+      summary: Actualizar una etiqueta por ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID de la etiqueta
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/requestBodies/label"
+      responses:
+        "200":
+          description: Etiqueta actualizada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/label"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    delete:
+      tags:
+        - Labels
+      summary: Eliminar una etiqueta por ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID de la etiqueta
+      responses:
+        "204":
+          description: Etiqueta eliminada
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /labels/{id}/verify:
+    patch:
+      tags:
+        - Labels
+      summary: Verificar una etiqueta por ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID de la etiqueta
+      responses:
+        "200":
+          description: Etiqueta verificada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/label"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  # CONTENTS
+  /contents:
+    get:
+      tags:
+        - Contents
+      summary: Obtener todos los contenidos
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/content"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    post:
+      tags:
+        - Contents
+      summary: Crear un nuevo contenido
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/requestBodies/content"
+      responses:
+        "201":
+          description: Contenido creado
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/content"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /contents/{id}:
+    get:
+      tags:
+        - Contents
+      summary: Obtener un contenido por ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID del contenido
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/content"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    delete:
+      tags:
+        - Contents
+      summary: Eliminar un contenido por ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID del contenido
+      responses:
+        "204":
+          description: Contenido eliminado
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /contents/label/{labelId}:
+    get:
+      tags:
+        - Contents
+      summary: Obtener todos los contenidos por ID de etiqueta
+      parameters:
+        - in: path
+          name: labelId
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID de la etiqueta
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/content"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+  /contents/{id}/verify:
+    patch:
+      tags:
+        - Contents
+      summary: Verificar un contenido por ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            $ref: "#/components/bases/id"
+          description: ID del contenido
+      responses:
+        "200":
+          description: Contenido verificado
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/content"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
 components:
   securitySchemes:
     bearerAuth:
